# lab-01-parser

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  Dockerfile  LICENSE  README.md  cpplint.py  json.hpp  test.cpp
.github/workflows/: CI.yml  Release.yml
cmake/: HunterGate.cmake
demo/: main.cpp
include/: Student.cpp  example.hpp  header.hpp  json.hpp  student.hpp
json/: students.json
scripts/: asan.sh  checks.sh  codestyle.sh  coverage.sh  macos_leak_check.sh  package.sh  setup-all.sh  setup-linter.sh  setup-toolchain.sh  setup.sh  tests.sh  tsan.sh  update.sh
sources/: .main.cpp.swp  example.cpp  json.cpp  json_file1.json  main.cpp  source.cpp  student.cpp
tests/: example.cpp  test.cpp  test_runner.cpp
tests/RESOURSCES/: json_file2.json  json_file3.json  json_file4.json  json_file5.json  json_file6.json
